package io.github.some_example_name

import io.github.some_example_name.sprite.Sprite

class Teams {
    private val teams: MutableList<Sprite> = mutableListOf()
}
